--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,16 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
+*.pyd
+*.pyo
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Environments
-.env
 .venv/
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
 
-# IDEs / editors
-.vscode/
-.idea/
-
-# Logs and debug output
-*.log
-debug/
-
-# OS files
+# OS/editor
 .DS_Store
 Thumbs.db
+.vscode/
+
+# Overlay debug captures
+.debug/
